--- a/mylibrary/src/main/res/values/strings.xml
+++ b/mylibrary/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="editor">编辑</string>
 
     <string name="post_A">发帖</string>
-    <string name="ok">确认</string>
+    <string name="ok">完成</string>
     <string name="next">下一步</string>
 
 
