--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="contact_number">联系电话</string>
     <string name="nickname">昵称</string>
     <string name="principal_">负责人：</string>
-    <string name="phone_">电话:</string>
+    <string name="phone_">电话：</string>
     <string name="more_number">更多号码</string>
     <string name="today_number">今日到访</string>
     <string name="visitors_number">到访人数</string>
